align media card grid items correctly

--- a/src/Umbraco.Web.UI.Client/src/views/components/mediacard/umb-media-card-grid.less
+++ b/src/Umbraco.Web.UI.Client/src/views/components/mediacard/umb-media-card-grid.less
@@ -16,6 +16,7 @@
     display: flex;
     height: 100%;
     align-items: center;
+    justify-content: center;
 }
 
 .umb-media-card-grid--inline-create-button {
@@ -24,6 +25,7 @@
     z-index: 1;
     opacity: 0;
     outline: none;
+    left: 0;
     width: 12px;
     margin-left: -9px;
     padding-left: 6px;
